metrics-agent/manifest/metrics-agent-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metrics-agent-service
  namespace: monitoring
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: metrics-agent-app
  type: ClusterIP
