metrics-agent/manifest/metrics-agent-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metrics-agent-ingress
  namespace: monitoring
spec:
  rules:
  - host: metrics-agent.10.71.163.150.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: metrics-agent-service
            port:
              number: 8080
  ingressClassName: nginx
